--- a/connexion-experiment/request_validation_api.yaml
+++ b/connexion-experiment/request_validation_api.yaml
@@ -41,6 +41,28 @@ paths:
         '200':
           $ref: '#/components/responses/AddNumbersResultResponse'
 
+  /users/{id}:
+    get:
+      operationId: request_validation_test.get_user
+      parameters:
+        - name: id
+          in: path
+          schema:
+            type: integer
+          required: true
+      responses:
+        '200':
+          description: User details.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  name:
+                    type: string
+
 components:
   responses:
     AddNumbersResultResponse:
