--- a/sphinx-experiment/Pipfile
+++ b/sphinx-experiment/Pipfile
@@ -8,6 +8,8 @@ sphinx = "==2.2.1"
 
 [packages]
 sphinxcontrib-plantuml = "==0.17.1"
+sphinxcontrib-datatemplates = "==0.5.0"
+pbr = "==5.4.3"
 
 [requires]
 python_version = "3.7"
