Add custom logging initialization

--- a/logging-experiment/pytest.ini
+++ b/logging-experiment/pytest.ini
@@ -1,4 +1,5 @@
 [pytest]
-addopts = -p no:warnings --capture=no
-log_cli = true
-log_cli_level = DEBUG
+addopts =
+  -p no:warnings
+  -p no:logging
+  --capture=no
